--- a/client/package.json
+++ b/client/package.json
@@ -26,7 +26,8 @@
     "redux": "^4.2.0",
     "redux-persist": "^6.0.0",
     "redux-thunk": "^2.4.1",
-    "sweetalert2": "^11.6.5",
+    "sweetalert2": "^11.6.8",
+    "sweetalert2-react-content": "^5.0.7",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
