--- a/client/package.json
+++ b/client/package.json
@@ -11,9 +11,11 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.1.3",
+    "chart.js": "^4.0.1",
     "jwt-decode": "^3.1.2",
     "mui-datatables": "^4.2.2",
     "react": "^18.2.0",
+    "react-chartjs-2": "^4.3.1",
     "react-countdown": "^2.3.3",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.38.0",
